--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@popmotion/popcorn": "^0.4.4",
     "@remix-run/react": "1.12.0",
+    "@sanity/client": "^5.3.0",
     "@shopify/cli": "3.29.0",
     "@shopify/cli-hydrogen": "^4.0.8",
     "@shopify/hydrogen": "^2023.1.5",
@@ -24,6 +26,7 @@
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
+    "framer-motion": "^10.3.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.5",
