--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popmotion/popcorn": "^0.4.4",
     "@remix-run/react": "1.12.0",
     "@sanity/client": "^5.3.0",
+    "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "3.29.0",
     "@shopify/cli-hydrogen": "^4.0.8",
     "@shopify/hydrogen": "^2023.1.5",
