--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run build:css && shopify hydrogen build",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "NODE_OPTIONS=\"--inspect\" npm run build:css && concurrently -g --kill-others-on-fail -r npm:dev:css \"shopify hydrogen dev\"",
+    "dev": "npm run build:css && concurrently -g --kill-others-on-fail -r npm:dev:css \"shopify hydrogen dev\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
@@ -17,7 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
-    "@remix-run/react": "^1.14.0",
+    "@remix-run/react": "^1.14.3",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "3.29.0",
@@ -60,7 +60,8 @@
     "postcss-cli": "^10.0.0",
     "postcss-import": "^15.0.0",
     "postcss-preset-env": "^7.8.2",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.5",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.5"
