--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^10.3.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "groq": "^3.8.2",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
