--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@next-boost/hybrid-disk-cache": "^0.3.0",
     "@popmotion/popcorn": "^0.4.4",
     "@remix-run/react": "^1.14.3",
     "@sanity/client": "^5.3.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-use": "^17.4.0",
+    "remix-image": "^1.4.0",
     "schema-dts": "^1.1.0",
     "tiny-invariant": "^1.2.0",
     "typographic-base": "^1.0.4",
