--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
+    "@portabletext/react": "^2.0.2",
     "@remix-run/react": "^1.14.0",
     "@remix-run/server-runtime": "^1.15.0",
     "@sanity/client": "^5.3.0",
