--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "format": "prettier --write --ignore-unknown .",
     "format:check": "prettier --check --ignore-unknown .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "cypress:open": "cypress open"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
@@ -34,6 +35,7 @@
     "graphql-tag": "^2.12.6",
     "groq": "^3.8.2",
     "isbot": "^3.6.5",
+    "logsnag": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
@@ -57,7 +59,7 @@
     "@types/react-dom": "^18.0.6",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
-    "cypress": "^12.8.1",
+    "cypress": "^12.11.0",
     "eslint": "^8.20.0",
     "eslint-plugin-hydrogen": "0.12.2",
     "postcss": "^8.4.16",
