--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-use": "^17.4.0",
+    "remix-island": "^0.1.2",
     "sanity-image": "^0.1.4",
     "schema-dts": "^1.1.0",
     "tiny-invariant": "^1.2.0",
