add lhci to oxygen deployment

--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -53,3 +53,6 @@ jobs:
           environment: 'preview'
           preview_url: ${{ steps.deploy.outputs.url }}
           description: ${{ github.event.head_commit.message }}
+
+      - name: Run Lighthouse CI
+        run: lhci autorun --collect.url=${{ steps.deploy.outputs.url }}
