--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -55,4 +55,6 @@ jobs:
           description: ${{ github.event.head_commit.message }}
 
       - name: Run Lighthouse CI
-        run: lhci autorun --collect.url=${{ steps.deploy.outputs.url }}
+        run:  |
+          npm install -g @lhci/cli@latest
+          lhci autorun --collect.url=${{ steps.deploy.outputs.url }}
