--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -57,4 +57,4 @@ jobs:
       - name: Run Lighthouse CI
         run:  |
           npm install -g @lhci/cli@latest
-          lhci autorun --collect.url=${{ steps.deploy.outputs.url }}
+          lhci autorun
