--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@types/eslint": "^8.4.10",
+    "@types/lozad": "^1.16.1",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "concurrently": "^7.4.0",
