--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
-    "@remix-run/react": "^1.14.0",
-    "@remix-run/server-runtime": "^1.15.0",
+    "@remix-run/react": "1.17.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "3.29.0",
@@ -52,8 +51,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.12.0",
-    "@remix-run/eslint-config": "1.12.0",
+    "@remix-run/dev": "1.17.1",
+    "@remix-run/eslint-config": "1.17.1",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^3.17.2",
     "@shopify/prettier-config": "^1.1.2",
