--- a/package.json
+++ b/package.json
@@ -3,33 +3,39 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "shopify hydrogen build",
-    "dev": "shopify hydrogen dev --codegen-unstable",
+    "build": "npm run build:css && shopify hydrogen build",
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
+    "dev": "npm run build:css && concurrently -g --kill-others-on-fail -r npm:dev:css \"shopify hydrogen dev\"",
+    "dev:css": "postcss styles --base styles --dir app/styles -w",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
+    "format": "prettier --write --ignore-unknown .",
+    "format:check": "prettier --check --ignore-unknown .",
     "typecheck": "tsc --noEmit",
-    "codegen": "shopify hydrogen codegen-unstable"
+    "cypress:open": "cypress open"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
+    "@headlessui/react": "^1.7.16",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
-    "@remix-run/react": "1.17.1",
+    "@remix-run/react": "^1.19.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "^3.48.0",
-    "@shopify/cli-hydrogen": "^5.1.0",
-    "@shopify/hydrogen": "^2023.7.0",
-    "@shopify/remix-oxygen": "^1.1.1",
+    "@shopify/cli-hydrogen": "^5.1.1",
+    "@shopify/hydrogen": "^2023.7.1",
+    "@shopify/remix-oxygen": "^1.0.3",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
-    "framer-motion": "^10.3.1",
+    "cy-spok": "^1.6.1",
+    "cypress-map": "^1.19.1",
+    "framer-motion": "^10.15.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "groq": "^3.8.2",
+    "groq": "^3.14.5",
     "isbot": "^3.6.5",
     "logsnag": "^0.1.6",
     "lozad": "^1.16.0",
@@ -40,35 +46,36 @@
     "remix-island": "^0.1.2",
     "sanity-image": "^0.1.4",
     "schema-dts": "^1.1.0",
+    "swr": "^2.2.0",
     "tiny-invariant": "^1.2.0",
     "typographic-base": "^1.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.17.1",
-    "@remix-run/eslint-config": "1.17.1",
+    "@remix-run/dev": "^1.19.1",
+    "@remix-run/eslint-config": "^1.19.1",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^3.17.2",
     "@shopify/prettier-config": "^1.1.2",
-    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.7",
-    "@types/canvas-confetti": "^1.6.0",
-    "@types/eslint": "^8.4.10",
+    "@types/eslint": "^8.44.1",
     "@types/lozad": "^1.16.1",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.20.0",
-    "eslint-plugin-hydrogen": "0.12.2",
+    "cypress": "^12.11.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-hydrogen": "^0.12.3",
     "postcss": "^8.4.16",
     "postcss-cli": "^10.0.0",
     "postcss-import": "^15.0.0",
     "postcss-preset-env": "^7.8.2",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.5",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   },
   "engines": {
