--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@shopify/prettier-config": "^1.1.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/canvas-confetti": "^1.6.0",
     "@types/eslint": "^8.4.10",
     "@types/lozad": "^1.16.1",
     "@types/react": "^18.0.20",
