--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "schema-dts": "^1.1.0",
     "tiny-invariant": "^1.2.0",
     "typographic-base": "^1.0.4",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/lozad": "^1.16.1",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^9.0.2",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "cypress": "^12.11.0",
