--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-store",
+  "name": "freedom-fatigues-hydrogen",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -18,7 +18,8 @@
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
-    "@remix-run/react": "1.17.1",
+    "@remix-run/react": "^1.19.1",
+    "@remix-run/server-runtime": "^1.19.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "3.29.0",
@@ -51,8 +52,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.17.1",
-    "@remix-run/eslint-config": "1.17.1",
+    "@remix-run/dev": "^1.19.1",
+    "@remix-run/eslint-config": "^1.19.1",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^3.17.2",
     "@shopify/prettier-config": "^1.1.2",
@@ -78,6 +79,9 @@
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.5"
+  },
+  "overrides": {
+    "@tanstack/react-virtual": "3.9.0"
   },
   "engines": {
     "node": ">=18"
