--- a/package.json
+++ b/package.json
@@ -79,6 +79,12 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.5"
   },
+  "resolutions": {
+    "@tanstack/react-virtual": "3.9.0"
+  },
+  "overrides": {
+    "@tanstack/react-virtual": "3.9.0"
+  },
   "engines": {
     "node": ">=18"
   }
