--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
-    "@remix-run/react": "^1.19.1",
-    "@remix-run/server-runtime": "^1.19.1",
+    "@remix-run/react": "1.17.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "3.29.0",
-    "@shopify/cli-hydrogen": "^5.0.2",
+    "@shopify/cli-hydrogen": "^4.0.8",
     "@shopify/hydrogen": "^2023.4.6",
-    "@shopify/remix-oxygen": "^1.1.1",
+    "@shopify/remix-oxygen": "^1.0.3",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
@@ -52,8 +51,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
+    "@remix-run/dev": "1.17.1",
+    "@remix-run/eslint-config": "1.17.1",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^3.17.2",
     "@shopify/prettier-config": "^1.1.2",
