--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "typescript": "^5.2.2"
   },
   "overrides": {
-    "@tanstack/react-virtual": "3.9.0"
+    "@tanstack/react-virtual": "3.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "resolutions": {
     "@tanstack/react-virtual": "3.9.0"
