--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "react-dom": "^18.2.0"
   },
   "resolutions": {
-    "@tanstack/react-virtual": "3.9.0"
+    "@tanstack/react-virtual": "3.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "engines": {
     "node": ">=18"
