--- a/package.json
+++ b/package.json
@@ -82,12 +82,14 @@
   "overrides": {
     "@tanstack/react-virtual": "3.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@shopify/hydrogen": "^2023.7.13"
   },
   "resolutions": {
     "@tanstack/react-virtual": "3.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@shopify/hydrogen": "^2023.7.13"
   },
   "engines": {
     "node": ">=18"
