--- a/package.json
+++ b/package.json
@@ -5,26 +5,27 @@
   "scripts": {
     "build": "npm run build:css && shopify hydrogen build",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "npm run build:css && concurrently -g --kill-others-on-fail -r npm:dev:css \"shopify hydrogen dev\"",
+    "dev": "npm run build:css && concurrently -g --kill-others-on-fail -r npm:dev:css \"shopify hydrogen dev --codegen-unstable\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "format": "prettier --write --ignore-unknown .",
     "format:check": "prettier --check --ignore-unknown .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "codegen": "shopify hydrogen codegen-unstable"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
-    "@remix-run/react": "^1.19.1",
+    "@remix-run/react": "^2.1.0",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
-    "@shopify/cli": "3.29.0",
+    "@shopify/cli": "3.50.0",
     "@shopify/cli-hydrogen": "^5.5.2",
-    "@shopify/hydrogen": "^2023.7.13",
-    "@shopify/remix-oxygen": "^1.1.8",
+    "@shopify/hydrogen": "^2023.10.0",
+    "@shopify/remix-oxygen": "^2.0.0",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
@@ -42,7 +43,7 @@
     "react-intersection-observer": "^9.4.1",
     "react-use": "^17.4.0",
     "remix-island": "^0.1.2",
-    "remix-utils": "^8.1.0",
+    "remix-utils": "^7.1.0",
     "sanity-image": "^0.1.4",
     "schema-dts": "^1.1.0",
     "tailwind-scrollbar": "^3.0.5",
@@ -52,8 +53,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
+    "@remix-run/dev": "^2.1.0",
+    "@remix-run/eslint-config": "^2.1.0",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^3.17.2",
     "@shopify/prettier-config": "^1.1.2",
