--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@remix-run/react": "^2.1.0",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
-    "@shopify/cli": "3.50.0",
-    "@shopify/cli-hydrogen": "^5.5.2",
+    "@shopify/cli": "^3.66.1",
+    "@shopify/cli-hydrogen": "^8.1.0",
     "@shopify/hydrogen": "^2023.10.0",
+    "@shopify/hydrogen-cli": "^0.12.1",
     "@shopify/remix-oxygen": "^2.0.0",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
@@ -84,7 +85,8 @@
   "overrides": {
     "@tanstack/react-virtual": "3.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "graphql-config": "5.1.3"
   },
   "resolutions": {
     "@tanstack/react-virtual": "3.9.0",
