--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -32,6 +32,6 @@ jobs:
       run: yarn
     - name: Build and Publish to Oxygen
       id: deploy
-      run: npx shopify hydrogen deploy --build-command "yarn build"
+      run: npx shopify hydrogen deploy --build-command "yarn build --force"
       env:
         SHOPIFY_HYDROGEN_DEPLOYMENT_TOKEN: "${{ secrets.OXYGEN_DEPLOYMENT_TOKEN_360566 }}"
