--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,1 +1,10 @@
-schema: node_modules/@shopify/hydrogen-react/storefront.schema.json
+projects:
+  default:
+    schema: 'node_modules/@shopify/hydrogen/storefront.schema.json'
+    documents:
+      - '!*.d.ts'
+      - '*.{ts,tsx,js,jsx}'
+      - 'app/**/*.{ts,tsx,js,jsx}'
+    plugins:
+      - typescript
+      - typescript-operations
