--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
-    "@remix-run/react": "^2.1.0",
+    "@redotech/redo-hydrogen": "^1.2.2",
+    "@remix-run/react": "^2.5.1",
+    "@remix-run/server-runtime": "^2.5.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
-    "@shopify/cli": "^3.66.1",
-    "@shopify/cli-hydrogen": "^6.0.2",
-    "@shopify/hydrogen": "^2023.10.2",
-    "@shopify/hydrogen-cli": "^0.12.1",
+    "@shopify/cli": "^3.51.0",
+    "@shopify/cli-hydrogen": "^7.0.0",
+    "@shopify/hydrogen": "^2024.1.0",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/mini-oxygen": "^3.1.1",
-    "@shopify/remix-oxygen": "^2.0.1",
+    "@shopify/remix-oxygen": "^2.0.3",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
@@ -57,10 +58,10 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.1.0",
-    "@remix-run/eslint-config": "^2.1.0",
+    "@remix-run/dev": "^2.5.1",
+    "@remix-run/eslint-config": "^2.5.1",
     "@shopify/eslint-plugin": "^42.0.1",
-    "@shopify/oxygen-workers-types": "^3.17.2",
+    "@shopify/oxygen-workers-types": "^4.0.0",
     "@shopify/prettier-config": "^1.1.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
