--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@headlessui/react": "^1.7.2",
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
+    "@redotech/redo-hydrogen": "^1.2.2",
     "@remix-run/react": "^2.8.0",
     "@remix-run/server-runtime": "^2.8.0",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
-    "@shopify/cli": "^3.56.3",
-    "@shopify/cli-hydrogen": "^7.1.2",
-    "@shopify/hydrogen": "^2024.1.5",
+    "@shopify/cli": "^3.58.0",
+    "@shopify/cli-hydrogen": "^8.0.0",
+    "@shopify/hydrogen": "^2024.4.0",
     "@shopify/hydrogen-codegen": "^0.3.2",
     "@shopify/mini-oxygen": "^3.1.1",
-    "@shopify/remix-oxygen": "^2.0.3",
+    "@shopify/remix-oxygen": "^2.0.4",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
