--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -21,6 +21,8 @@ jobs:
         check-latest: true
     - name: Install dependencies
       run: npm ci --legacy-peer-deps
+    - name: Install deployment dependencies
+      run: npm install -g @shopify/cli-kit @shopify/oxygen-cli @shopify/cli-hydrogen
     - name: Build and Publish to Oxygen
       id: deploy
       run: npx shopify hydrogen deploy
