--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: lts/*
         check-latest: true
     - name: Install dependencies
-      run: npm ci --legacy-peer-deps
+      run: npm ci
     - name: Install deployment dependencies
       run: npm install -g @shopify/cli-kit @shopify/oxygen-cli @shopify/cli-hydrogen
     - name: Build and Publish to Oxygen
