--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -19,12 +19,15 @@ jobs:
       with:
         node-version: lts/*
         check-latest: true
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
     - name: Install dependencies
-      run: npm install
+      run: pnpm install
     - name: Install deployment dependencies
-      run: npm install -g @shopify/cli-kit @shopify/oxygen-cli @shopify/cli-hydrogen
+      run: pnpm add -g @shopify/cli-kit @shopify/oxygen-cli @shopify/cli-hydrogen
     - name: Build and Publish to Oxygen
       id: deploy
-      run: npx shopify hydrogen deploy
+      run: pnpm exec shopify hydrogen deploy
       env:
         SHOPIFY_HYDROGEN_DEPLOYMENT_TOKEN: "${{ secrets.OXYGEN_DEPLOYMENT_TOKEN_360566 }}"
