--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
     "@redotech/redo-hydrogen": "^1.4.2",
-    "@remix-run/react": "^2.16.2",
-    "@remix-run/server-runtime": "^2.13.1",
+    "@remix-run/react": "2.13.1",
+    "@remix-run/server-runtime": "2.13.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@shopify/cli": "^3.69.4",
-    "@shopify/cli-hydrogen": "^8.1.0",
-    "@shopify/hydrogen": "^2025.1.3",
+    "@shopify/hydrogen": "2024.10.1",
     "@shopify/hydrogen-codegen": "^0.3.2",
-    "@shopify/mini-oxygen": "^3.1.1",
+    "@shopify/hydrogen-react": "2024.10.1",
+    "@shopify/mini-oxygen": "^3.0.6",
     "@shopify/remix-oxygen": "^2.0.9",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
@@ -58,10 +58,10 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.13.1",
-    "@remix-run/eslint-config": "^2.13.1",
+    "@remix-run/dev": "2.13.1",
+    "@remix-run/eslint-config": "2.13.1",
+    "@shopify/cli-hydrogen": "^8.1.0",
     "@shopify/eslint-plugin": "^42.0.1",
-    "@shopify/hydrogen-react": "^2025.1.3",
     "@shopify/oxygen-workers-types": "^4.1.2",
     "@shopify/prettier-config": "^1.1.2",
     "@shopify/storefront-kit-react": "^2023.1.3",
@@ -87,7 +87,7 @@
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.8",
     "typescript": "^5.2.2",
-    "vite": "^6.2.3"
+    "vite": "^5.1.0"
   },
   "overrides": {
     "@tanstack/react-virtual": "3.9.0",
