--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@popmotion/popcorn": "^0.4.4",
     "@portabletext/react": "^2.0.2",
     "@redotech/redo-hydrogen": "^1.4.2",
-    "@remix-run/react": "2.13.1",
     "@remix-run/server-runtime": "2.13.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
@@ -59,7 +58,8 @@
   },
   "devDependencies": {
     "@remix-run/dev": "2.13.1",
-    "@remix-run/eslint-config": "2.13.1",
+    "@remix-run/eslint-config": "2.16.1",
+    "@remix-run/react": "2.13.1",
     "@shopify/cli-hydrogen": "^8.1.0",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^4.1.2",
@@ -70,8 +70,9 @@
     "@types/canvas-confetti": "^1.6.0",
     "@types/eslint": "^8.4.10",
     "@types/lozad": "^1.16.1",
-    "@types/react": "^18.0.20",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.2",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
