--- a/.github/workflows/oxygen-deployment-360566.yml
+++ b/.github/workflows/oxygen-deployment-360566.yml
@@ -28,6 +28,6 @@ jobs:
       run: pnpm add -g @shopify/cli-kit @shopify/oxygen-cli @shopify/cli-hydrogen
     - name: Build and Publish to Oxygen
       id: deploy
-      run: pnpm exec shopify hydrogen deploy
+      run: pnpm exec shopify hydrogen deploy --force
       env:
         SHOPIFY_HYDROGEN_DEPLOYMENT_TOKEN: "${{ secrets.OXYGEN_DEPLOYMENT_TOKEN_360566 }}"
