--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "npm run build:css && shopify hydrogen build",
+    "build": "pnpm run build:css && shopify hydrogen build",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "npm run build:css && concurrently -g --kill-others-on-fail -r npm:dev:css \"shopify hydrogen dev --codegen\"",
+    "dev": "pnpm run build:css && concurrently -g --kill-others-on-fail -r pnpm:dev:css \"shopify hydrogen dev --codegen\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
-    "preview": "npm run build && shopify hydrogen preview",
+    "preview": "pnpm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "format": "prettier --write --ignore-unknown .",
     "format:check": "prettier --check --ignore-unknown .",
