--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "types": ["@shopify/oxygen-workers-types"],
+    "types": [
+      "@shopify/oxygen-workers-types",
+      "@shopify/hydrogen/storefront-api-types"
+    ],
     "paths": {
       "~/*": ["app/*"]
     },
