--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@remix-run/server-runtime": "2.16.1",
     "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
-    "@shopify/cli": "^3.69.4",
+    "@remix-run/react": "^2.13.1",
+    "@shopify/cli": "^3.73.0",
+    "@shopify/cli-hydrogen": "^8.1.0",
     "@shopify/hydrogen": "2024.10.1",
-    "@shopify/hydrogen-codegen": "^0.3.2",
-    "@shopify/hydrogen-react": "2024.10.1",
-    "@shopify/mini-oxygen": "^3.0.6",
-    "@shopify/remix-oxygen": "^2.0.12",
+    "@shopify/hydrogen-codegen": "^0.3.1",
+    "@shopify/mini-oxygen": "^3.0.3",
+    "@shopify/remix-oxygen": "^2.0.9",
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "concurrently": "^7.5.0",
@@ -38,7 +39,7 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "groq": "^3.8.2",
-    "isbot": "^3.6.5",
+    "isbot": "^3.8.0",
     "logsnag": "^0.1.6",
     "lozad": "^1.16.0",
     "posthog-js": "^1.215.6",
@@ -51,20 +52,17 @@
     "sanity-image": "^0.1.4",
     "schema-dts": "^1.1.0",
     "tailwind-scrollbar": "^3.0.5",
-    "tiny-invariant": "^1.2.0",
+    "tiny-invariant": "^1.3.1",
     "typographic-base": "^1.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "2.16.1",
-    "@remix-run/eslint-config": "2.16.1",
-    "@remix-run/react": "2.16.1",
-    "@shopify/cli-hydrogen": "^8.1.0",
+    "@remix-run/dev": "^2.13.1",
+    "@remix-run/eslint-config": "^2.13.1",
     "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^4.1.2",
     "@shopify/prettier-config": "^1.1.2",
-    "@shopify/storefront-kit-react": "^2023.1.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@types/canvas-confetti": "^1.6.0",
